------------------------------------------------------------------------
r3 | serge.vakulenko | 2008-04-27 23:21:28 +0400 (Вск, 27 Апр 2008) | 3 lines

Some code cleanup.


------------------------------------------------------------------------
r2 | serge.vakulenko | 2008-04-26 21:45:23 +0400 (Сбт, 26 Апр 2008) | 4 lines

Scanner: implemented keywords and number literal.
Parser: added syntax constructs.


------------------------------------------------------------------------
r1 | (no author) | 2008-04-26 19:59:27 +0400 (Сбт, 26 Апр 2008) | 1 line

Initial directory structure.
------------------------------------------------------------------------